[package]
name = "hyper-tls"
version = "0.5.0" # don't forget html_root_url in lib.rs
description = "Default TLS implementation for use with hyper"
authors = ["Sean McArthur <sean@seanmonstar.com>"]
license = "MIT/Apache-2.0"
keywords = ["hyper", "tls", "http", "https", "ssl"]
homepage = "https://hyper.rs"
repository = "https://github.com/hyperium/hyper-tls"
documentation = "https://docs.rs/hyper-tls"
edition = "2018"

[features]
vendored = ["native-tls/vendored"]

[dependencies]
bytes = "1"
http-body-util = "0.1.0"
hyper = { version = "1.0.0", default-features = false }
hyper-util = { git = "https://github.com/hyperium/hyper-util", default-features = false, features = [
    "client",
], rev = "de1ff4c4d0ced92b571e873e6754baaed0906f6c" }
native-tls = "0.2.1"
tokio = "1"
tokio-native-tls = "0.3"
tower-service = "0.3"

[dev-dependencies]
hyper-util = { git = "https://github.com/hyperium/hyper-util", default-features = false, features = [
    "http1",
], rev = "de1ff4c4d0ced92b571e873e6754baaed0906f6c" }
tokio = { version = "1.0.0", features = ["io-std", "macros", "io-util"] }
